# forrnsow

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt  forrnsow.clap
include/: biquad.hpp  envelope.hpp  fourier_transform.hpp  gui.hpp  oscillator.hpp  synthesis.hpp
include/fonts/: SourceCodeProFonts.h
src/: biquad.cpp  entry.cpp  envelope.cpp  fourier_transform.cpp  gui.cpp  oscillator.cpp  synthesis.cpp
